# llm_gateways

./: .env.example  .gitignore  AGENTS.md  CHINESE_FRONTIER_MODELS.csv  FOREIGN_FRONTIER_MODELS.csv  OPENAI_STYLE_CHAT_COMPLETIONS_API_TEST.md  README.md  REFERENCES.md  long_prompt_generator.py  max_latency_gemini.py  model_lists.md  openrouter.py  pyproject.toml  requirements.txt  test_chat.py  test_chat_token_budget.py  test_openrouter_nano_banana.py  主流文本模型档位索引.json  价格分析.md  国产模型价格参考.csv  国产模型价格参考.json  小龙虾优质模型价格.csv  小龙虾优选模型.json  海外模型价格参考.json
benchmark/: OPERATIONS.md  README.md  VOLC_STANDALONE.md
benchmark/locust/: README.md  config.example.env  locustfile.py  requirements.txt  summarize_run.py
benchmark/mock/: Dockerfile  README.md  deploy.sh  main.py
benchmark/newapi/: .env.example  deploy.sh  docker-compose.yml
benchmark/volc-standalone/: .env.example  .gitignore  deploy.sh  docker-compose.yml
docs/: TOKEN_BIT_PRICING.md  newapi-mixroute-validation-2026-04-09.md  newapi-mixroute-validation-executive-brief-2026-04-09.md  newapi-pricing-and-models.md  newapi-token-gateway-progress-summary-2026-04-14.md
gateway/: __init__.py  config.py  database.py  main.py
gateway/billing/: __init__.py  tracker.py
gateway/middleware/: auth.py
gateway/models/: billing.py  keys.py
gateway/providers/: anthropic.py  base.py  openai.py  registry.py
gateway/routers/: admin.py  chat.py  deps.py  (+1 more)
scripts/: openai_probe_payload.py  rpm_minute_window_probe.py  rpm_until_limit.py
tests/: conftest.py  test_admin.py  test_billing.py  test_gateway.py  test_providers.py
(+13 files in other folders)
